# msgbot

./: .gitignore  Cargo.toml  README.md
.key/: irrigatron_bot  larpwa_bot
src/: banner.rs  cli.rs  cmd.rs  cmdbot.rs  lib.rs  main.rs  state.rs  telebot.rs
src/asset/help/: get.md  help.md  hold.md  run.md  set.md
src/helpbin/: pin.rs
