[package]
name = "msgbot"
version = "0.1.0"
authors = ["Sascha Smolkov <sascha.smolkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### cli|args
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
clap_flags= "0.4.0"
rust-embed="5.1.0"

# cli|communication|check
# atty = "0.2.13"

# cli|fine|terminal
ansi_term = "0.12.1"
yansi = "0.5.0"

## error|managment
failure = "0.1.6"
exitfailure = "0.5.1"
human-panic = "1.0.1"

## log
log = "0.4.8"
femme = "1.3.0"

# configuration|serialize

# time|date
quanta = "^0.3"

multipart = { version = "0.16", default-features = false, features = ["client"] }
# telegram-bot = "0.6"
telegram-bot = {git="https://github.com/telegram-rs/telegram-bot"}
# tokio-core = "0.1"
# futures = "0.1"
tokio = "0.2.0-alpha.6"
futures-preview = "=0.3.0-alpha.19"
# bot-framework = "0.1"
systemstat="0.1.5"
lazy_static ="1.4.0"
mio={path="../mio"}
sysinfo = "0.9.6"
